[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/TransformationBird.gd" type="Script" id=1]
[ext_resource path="res://Materials/Rainbow.tres" type="Material" id=2]
[ext_resource path="res://Sprites/Player/BirdWingUp.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/BirdWingDown.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="TransformationBird" type="KinematicBody2D"]
position = Vector2( 432, 200 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprites" type="Node2D" parent="."]

[node name="SpriteWingUp" type="Sprite" parent="Sprites"]
material = ExtResource( 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteWingDown" type="Sprite" parent="Sprites"]
material = ExtResource( 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
